# bootcamp

./: .gitignore  README.md  postgres practice.sql
DE/: Claims_Ingestion.py  DataQuality.csv  DataQualityChecks.py  Detailed_Claims_Analysis.py  Dockerfile  Encrypted_Policies_Analysis.csv  IncrementalUpdates.py  Incremental_Claims_Analysis.py  Tasks_Orchestration.py  claims_data.csv  docker-compose.yml  read.py  total_claims.csv  updated_Admins 2024-02-27 to 2024-03-05.csv  updated_Admins 2024-02-27 to 2024-03-05.parquet  updated_Claims 2024-02-24 to 2024-03-02.csv  updated_Claims 2024-02-27 to 2024-03-05.csv  updated_Claims 2024-02-27 to 2024-03-05.parquet  updated_Customers 2024-02-27 to 2024-03-05.csv  updated_Customers 2024-02-27 to 2024-03-05.parquet  updated_Policies 2024-02-27 to 2024-03-05.csv  updated_Policies 2024-02-27 to 2024-03-05.parquet
DE/airflow/: airflow.cfg  airflow.db  standalone_admin_password.txt
Linux/: shell_scripting_notes.txt  system_health_monitor_script.sh
Python Scraping/: decrypted_scraped_data.csv  encrypted_scraped_data.enc  scraped_data.csv  scraping.py
Python Scraping/learning/: practice_beautiful_soup.py
air/: docker-compose.yml  dockerfile
air/airflow/: airflow.cfg  airflow.db  (+1 more)
encryptionAndDescryptionOfCSVFiles/: commands.txt
feeltheheat/: Internet & Networking.docx  manage.py  requirements.txt  vercel.json
git_practice/: resources.docx
showtemp/: build.sh  db.sqlite3  manage.py  pyproject.toml  requirements.txt  vercel.json
showtemp/showtemp/: asgi.py  settings.py  urls.py  views.py  wsgi.py
(+13 files in other folders)
